--- a/scss/style.css
+++ b/scss/style.css
@@ -600,7 +600,9 @@ a {
 
 .panel-full {
   height: 100%;
+  height: 100vh;
   max-height: 100%;
+  max-height: 100vh;
   display: table;
   overflow: hidden;
   box-shadow: inset 0 0px 6px 1px rgba(0, 0, 0, 0.3); }
@@ -794,6 +796,15 @@ object {
 #blog-page {
   background: url("http://localhost:8888/wordpress/wp-content/uploads/2013/12/unsplash_5281fc5adc3ad_1.jpg"); }
 
+@media screen and (max-width: 796px) {
+  .panel-full {
+    height: 100%;
+    max-height: 100%;
+    display: table;
+    overflow: hidden;
+    box-shadow: inset 0 0px 6px 1px rgba(0, 0, 0, 0.3); }
+    .panel-full > .container, .panel-full > .container-small, .panel-full > .container-small {
+      text-align: center; } }
 /* ==========================================================================
    Seamless
    ========================================================================== */
